# MicroSOC

./: main.py  microsoc.db  pyproject.toml  requirements.txt
docs/: Docs.txt  tasks.txt  work_done_till_now.txt
frontend/: package.json
scripts/: init_db_dummy.py  simulate_attacks.py
src/: main.py
src/api/endpoints/: actions.py  logs.py
src/app/api/: api.py  deps.py
src/app/api/endpoints/: dashboard.py  logs.py  services_stub.py
src/app/core/: config.py
src/app/services/: gemini_service.py  mock_log_generator.py
src/backend/app/: main.py
src/backend/app/api/v1/: api.py
src/backend/app/api/v1/endpoints/: dashboard.py  logs.py
src/backend/app/db/: crud.py  models.py  session.py
src/backend/app/schemas/: __init__.py
src/backend/app/services/: gemini_service.py
src/db/: crud.py
src/schemas/: alert.py  log.py
src/services/: decision_engine.py
tests/: conftest.py  test_actions.py  test_api.py  test_dashboard.py  test_logs.py
