[project]
name = "genai-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.1",
    "google-adk>=1.18.0",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
    "twilio>=9.9.0",
    "uvicorn>=0.40.0",
]
