[project]
name = "genai-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.127.1",
    "google-adk>=1.18.0",
    "google-cloud-logging>=3.13.0",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "router>=0.1",
    "sqlalchemy>=2.0.45",
    "twilio>=9.9.0",
    "uvicorn>=0.40.0",
]
